--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^11.18.1",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
