--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.2",
+    "@react-three/fiber": "^8.17.12",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
     "mini-svg-data-uri": "^1.4.4",
@@ -19,7 +21,9 @@
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.172.0",
+    "three-globe": "^2.40.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
